tests/ui/type-alias-impl-trait/issue-96572-unconstrained-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/issue-96572-unconstrained-mismatch.rs:8:14
   |
LL |     match foo {
   |           --- this expression has type `T`
LL |         None => (),
LL |         Some((a, b, c)) => (),
   |              ^^^^^^^^^ expected a tuple with 2 elements, found one with 3 elements
   |
   = note: expected tuple `(u32, u32)`
              found tuple `(_, _, _)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
